# 42Projects

./: README.md
cub3d/: Makefile
cub3d/asset/: door.xpm
cub3d/includes/: cub3d.h
cub3d/libft/: .gitignore  Makefile  ft_dblst_0.c  ft_dblst_1.c  ft_list_0.c  ft_list_1.c  ft_mem.c  ft_sort.c  ft_stack_0.c  ft_std.c  ft_string_0.c  ft_string_1.c  ft_string_3.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  (+1 more)
fract-ol/: Makefile
ft_printf/: Makefile  ft_printf.c  ft_printf.h
ft_transcendence/: Makefile  docker-compose.yml
ft_transcendence/cli/: .dockerignore  Cargo.toml  Dockerfile  README.md
ft_transcendence/cli/src/: login.rs  main.rs  menu.rs  pong.rs  tournament.rs  user.rs
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
inception/: .env  Makefile  docker-compose.yml
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+4 more)
minishell/: Makefile
minitalk/: .env
push_swap/: Makefile  check.c  display.c  push_swap.c  push_swap.h  solve.c  solve_v2.c  split.c  stack_start.c  swap_a.c  swap_b.c
webserv/: Makefile
(+796 files in other folders)
